change style and layout bug

--- a/public/css/style.2.css
+++ b/public/css/style.2.css
@@ -6,32 +6,32 @@ body {
   font-size: 16px;
   font-weight: bold;
   line-height: 1.42857143;
-  background:#F8F4DA;
-  color: #666666;  
+  background:#221D25;
+  color: #26192B;  
 }
 
 a:link {
-  color: #C18639;
+  color: #AC3C55;
 }
 
 /* visited link */
 a:visited {
-  color: #C18639;
+  color: #AC3C55;
 }
 
 /* mouse over link */
 a:hover {
-  color: #C18639;
+  color: #AC3C55;
 }
 
 
 /* selected link */
 a:active {
-  color: #C18639;
+  color: #AC3C55;
 }
 
 h2 {
-  color:#C18639;
+  color:#FFBB00;
 }
 .navText{
   font-family: Helvetica, 微软雅黑;
@@ -41,13 +41,13 @@ h2 {
 
 a {
   color: #FFCA27;
-  font-size:16px;
+  font-size:14px;
   font-weight: bold;  
   font-family: Helvetica, 微软雅黑;
 }
 
 .container {
-  background-color: #F8F4DA;
+  background-color: #221D25;
   padding : 0px;
 }
 
@@ -67,17 +67,18 @@ a {
   font-family: Helvetica, 微软雅黑,'Roboto', sans-serif;
   font-size: 14px;
   font-style: italic;
-  color: #666666;
+  color: #6D6D6D;
   width: 100%;
   line-height: 28px;
-  background-color: #F4EFCA;
+   background-color: #191919; 
+  /* padding:16px; */
   line-height: 16px;
   display: block;
   clear: both;
 }
 
 .footer a {
-  color: #666666;
+  color: #FFF;
   
 }
 
@@ -160,7 +161,7 @@ a {
 
 .boxshadow {
     border-radius: 5px;
-    background: #FFF;
+    background: #F5F9F9;
     position: relative;
     -moz-box-shadow: 1px 2px 4px rgba(0, 0, 0,0.2);
     -webkit-box-shadow: 1px 2px 4px rgba(0, 0, 0, .2);
@@ -185,6 +186,7 @@ a {
     margin-top: 4px;
     font-size: 16px;
     font-weight: bold;
+    color: #64A764;
 }
 
 .resource-info {
@@ -200,7 +202,8 @@ a {
 
 .treasureList-title{
     font-size: 16px;
-    font-weight: bold;
+    /* font-weight: bold; */
+    color:#F5F5F8;
 }
 .treasureList-intro-hide{
     height: 6em; 
@@ -212,15 +215,14 @@ a {
 }
 
 .treasure-item-tag-content {
-  padding: 18px;
+  /* padding: 18px; */
   /* border: 1px solid #DDD; */
-  border-radius: 5px;
+  /* border-radius: 2px; */
   background: #FFF;
   position: relative;
   -moz-box-shadow: 1px 2px 4px rgba(0, 0, 0,0.2);
   -webkit-box-shadow: 1px 2px 4px rgba(0, 0, 0, .2);
   box-shadow: 1px 2px 4px rgba(0, 0, 0, .2);
-  padding: 10px;
   margin-bottom: 16px;
 }
 
@@ -229,6 +231,7 @@ a {
   padding: 18px;
   line-height: 24px;
   font-weight: lighter;
+  color: #FFBB00;
 }
 
 .row .treasure-item-right-tab a{
@@ -258,12 +261,12 @@ a {
     font-weight: 700;
     color: #9F8702;
     text-align: center;
-    background-color: #FFD700;
+    background-color: #221A29;
     clear: both;
 }
 .navbar-default{
   border-width: none;
-  background-color: #C18639;
+  background-color: #AC3C55;
     /*background-image: -webkit-linear-gradient(top,#fff 0,#f8f8f8 100%);
     background-image: -o-linear-gradient(top,#fff 0,#f8f8f8 100%);
     background-image: -webkit-gradient(linear,left top,left bottom,from(#fff),to(#f8f8f8));
@@ -276,14 +279,15 @@ a {
   background-image: none;
 }
 .navbar-default .container{
-  background-color: #C18639;
+  background-color: #AC3C55;
 }
 
 /*Index page panel-heading*/
 .panel-heading {
     color: #FFF;
-    background-color: #A3D1A5;
-    border-color: #FFE140;
+     background-color: #A3D1A5; 
+    border-color: #FFBB00;
+    margin-bottom: 4px;
 }
 
 .panel {
@@ -291,6 +295,10 @@ a {
   border: none;
   /*border-color: #FFE140;*/
   /* padding-bottom: 16px; */
+}
+
+.panel-Body {
+  background-color: transparent;
 }
 
 
@@ -332,7 +340,7 @@ a.btn:link,a.btn:visited {
 }
 
 .container-fluid{
-  background-color: #F4EFCA;
+  background-color: #191919;
   padding-top: 16px;
   padding-bottom: 16px;
   margin-top: 28px;
